cmake_minimum_required(VERSION 3.25)
project("Expression Parser" VERSION 1.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(${CMAKE_SOURCE_DIR}/include)
add_library(ExpressionParserLib src/Parser.cpp)
target_include_directories(ExpressionParserLib PUBLIC ${CMAKE_SOURCE_DIR}/include)
add_executable(testLexer tests/unit/testLexer.cpp)
target_link_libraries(testLexer PRIVATE ExpressionParserLib)
add_executable(testParser tests/unit/testParser.cpp)
target_link_libraries(testParser PRIVATE ExpressionParserLib)
